--- a/chatgpt-api-infrastructure/pom.xml
+++ b/chatgpt-api-infrastructure/pom.xml
@@ -16,5 +16,48 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+<dependencies>
+    <!--            web 开发 依赖-->
+<!--    <dependency>-->
+<!--        <groupId>com.common.java</groupId>-->
+<!--        <artifactId>common-utils</artifactId>-->
+<!--        <version>2.3.5.RELEASE</version>-->
+<!--    </dependency>-->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-jdbc</artifactId>
+        <version>2.3.5.RELEASE</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+        <version>2.3.5.RELEASE</version>
+    </dependency>
 
+    <!-- 热部署 -->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-devtools</artifactId>
+        <version>2.3.5.RELEASE</version>
+        <scope>runtime</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-tomcat</artifactId>
+        <version>2.3.5.RELEASE</version>
+        <!--<scope>provided</scope>-->
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-test</artifactId>
+        <scope>test</scope>
+        <version>2.3.5.RELEASE</version>
+    </dependency>
+
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-freemarker</artifactId>
+        <version>2.3.5.RELEASE</version>
+    </dependency>
+</dependencies>
 </project>
