--- a/chatgpt-api-interfaces/src/main/resources/application.yml
+++ b/chatgpt-api-interfaces/src/main/resources/application.yml
@@ -1,2 +1,74 @@
+##thymelea模板配置
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
+#spring.thymeleaf.mode=HTML5
+#spring.thymeleaf.encoding=UTF-8
+#spring.thymeleaf.content-type=text/html
+#spring.thymeleaf.cache=false
+#spring.resources.chain.strategy.content.enabled=true
+#spring.resources.chain.strategy.content.paths=/**
+
+
+#thymelea模板配置
+
+logging:
+  level:
+    #        tk.mybatis: DEBUG
+    com.megasun.security.admin: DEBUG
+spring:
+  thymeleaf:
+    cache: false
+    prefix: classpath:/templates/
+    suffix: .html
+    encoding: UTF-8
+    content-type: text/html
+    mode: HTML5
+  mvc:
+    static-path-pattern: /static/**
+  resources:
+    chain:
+      strategy:
+        content:
+          enabled: true
+          paths: /**
+    # 配置静态资源文件路径
+    static-locations: ["/templates/","/resources/","/static/","/public/"]
+  #配置数据库连接  本机 192.168.3.13
+  datasource:
+    username: root
+    password: 1234567
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://192.168.1.112:3306/ssmtest?useUnicode=true&characterEncoding=utf8
+  jpa:
+    properties:
+      hibernate:
+        hbm2ddl:
+          auto: create
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        format_sql: true
+    show-sql: true
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: local
+#  jpa:
+#    hibernate:
+#      ddl-auto: none.
 server:
-  port: 8090
+  port: 8443
+
+mybatis-plus:
+  mapper-locations: "classpath*:mapper/*.xml"
+#  type-aliases-package: com.megasun.journey.settleCenter.entity
+  global-config:
+    db-config:
+      #主键类型  0:"数据库ID自增"，1:"用户输入ID"，2:"全局唯一ID(数字类型唯一ID)"，3:"全局唯一ID UUID";
+      id-type: uuid
+  configuration:
+    #开启驼峰命名
+    map-underscore-to-camel-case: true
+    #开启sql打印到控制台
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+
